updated for mercury

--- a/Python/bisection.ipynb
+++ b/Python/bisection.ipynb
@@ -6,9 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import mercury as mr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = mr.Text(value=\"Piotr\", label=\"What is your name?\")\n",
+    "print(f\"Hello {name.value}\")\n",
+    "# set application properites with App object\n",
+    "app = mr.App(show_code = True)"
    ]
   },
   {
@@ -86,7 +99,24 @@
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def graph(x):\n",
+    "    #need function\n",
+    "    #need tangents\n",
+    "    #root\n",
+    "    fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "    y=f(x)\n",
+    "    plt.plot(x,y)\n",
+    "   \n",
+    "    plt.ylabel('some numbers')\n",
+    "    plt.axis('tight')\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "    ax.spines['top'].set_visible(False)\n",
+    "    ax.spines['right'].set_visible(False)\n",
+    "\n",
+    "graph(np.arange(-np.pi,np.pi,np.pi/32))"
+   ]
   },
   {
    "cell_type": "code",
