--- a/Python/newtonsmethod.ipynb
+++ b/Python/newtonsmethod.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "0.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,18 +100,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'ax' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb#W4sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     ax\u001b[39m.\u001b[39mspines[\u001b[39m'\u001b[39m\u001b[39mtop\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mset_visible(\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     ax\u001b[39m.\u001b[39mspines[\u001b[39m'\u001b[39m\u001b[39mright\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mset_visible(\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m graph(np\u001b[39m.\u001b[39;49marange(\u001b[39m-\u001b[39;49mnp\u001b[39m.\u001b[39;49mpi,np\u001b[39m.\u001b[39;49mpi,np\u001b[39m.\u001b[39;49mpi\u001b[39m/\u001b[39;49m\u001b[39m32\u001b[39;49m))\n",
-      "\u001b[1;32m/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb#W4sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m plt\u001b[39m.\u001b[39mgrid(\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb#W4sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m plt\u001b[39m.\u001b[39mshow()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb#W4sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m ax\u001b[39m.\u001b[39mspines[\u001b[39m'\u001b[39m\u001b[39mtop\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mset_visible(\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/conquestace/Documents/Websites/mathcodes/Python/newtonsmethod.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m ax\u001b[39m.\u001b[39mspines[\u001b[39m'\u001b[39m\u001b[39mright\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mset_visible(\u001b[39mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ax' is not defined"
-     ]
     }
    ],
    "source": [
@@ -119,7 +107,7 @@
     "    #need function\n",
     "    #need tangents\n",
     "    #root\n",
-    "    fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "    #fig, ax = plt.subplots(figsize=(10, 10))\n",
     "    y=f(x)\n",
     "    plt.plot(x,y)\n",
     "   \n",
@@ -127,15 +115,14 @@
     "    plt.axis('tight')\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
-    "    ax.spines['top'].set_visible(False)\n",
-    "    ax.spines['right'].set_visible(False)\n",
+    "   \n",
     "\n",
     "graph(np.arange(-np.pi,np.pi,np.pi/32))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +131,7 @@
        "0.7071067811865475"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
