--- a/Python/bisection.ipynb
+++ b/Python/bisection.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Report title\n",
+    "author: Your name\n",
+    "description: My amazing report\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
