we're getting somewhere!

--- a/Python/VertexForm.ipynb
+++ b/Python/VertexForm.ipynb
@@ -13,6 +13,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checkbox to control code visibility\n",
+    "show_code = mr.Checkbox(label=\"Show code\", value=True)\n",
+    " \n",
+    "# App object to set `show_code` attribute\n",
+    "app = mr.App(title=\"Show or hide code\", show_code=show_code.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -99,6 +112,7 @@
     }
    ],
    "source": [
+    "\n",
     "a = mr.Slider(label=\"a\", min=-5, max=5, value=1)\n",
     "b = mr.Slider(label=\"b\", min=-5, max=5, value=1)\n",
     "c = mr.Slider(label=\"c\", min=-5, max=5, value=1)\n",
@@ -110,7 +124,11 @@
    "metadata": {},
    "source": [
     "We want to turn \n",
-    "$$ AX+BY=C$$ into $$y=mx+b$$\n",
+    "$\n",
+    "AX+BY=C\n",
+    "$ into $\n",
+    "y=mx+b\n",
+    "$\n",
     "to do this:\n",
     "We rearrange:\n",
     "$$\n",
