issue 303 is a meme

--- a/Python/bisection.ipynb
+++ b/Python/bisection.ipynb
@@ -135,7 +135,9 @@
     "maxi = mr.Numeric(value=2, min=-2**128, max=2**128, label=\"what is the max value of interval?\")\n",
     "\n",
     "# set application properites with App object\n",
-    "app = mr.App(show_code = True)\n"
+    "app = mr.App(description=\"Root finding method\",\n",
+    "             show_code = True\n",
+    "             static_notebook=True)\n"
    ]
   },
   {
