--- a/Python/bisection.ipynb
+++ b/Python/bisection.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "# set application properites with App object\n",
     "app = mr.App(description=\"Root finding method\",\n",
-    "             show_code = True\n",
+    "             show_code = True,\n",
     "             static_notebook=True)\n"
    ]
   },
