--- a/Python/bisection.ipynb
+++ b/Python/bisection.ipynb
@@ -137,7 +137,7 @@
     "# set application properites with App object\n",
     "app = mr.App(description=\"Root finding method\",\n",
     "             show_code = True,\n",
-    "             static_notebook=True)\n"
+    "             static_notebook=False)\n"
    ]
   },
   {
