Added some Mercury functionality

--- a/Python/basic_python.ipynb
+++ b/Python/basic_python.ipynb
@@ -19,7 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "app = mr.App(description=\"it goes left to right\",\n",
+    "             show_code = True,\n",
+    "             static_notebook=False)"
    ]
   },
   {
