--- a/Python/pendulum.ipynb
+++ b/Python/pendulum.ipynb
@@ -8,7 +8,10 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.integrate import odeint"
+    "from scipy.integrate import odeint\n",
+    "app = mr.App(description=\"it goes left to right\",\n",
+    "             show_code = True,\n",
+    "             static_notebook=False)"
    ]
   },
   {
