--- a/Python/basic_python.ipynb
+++ b/Python/basic_python.ipynb
@@ -15,11 +15,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/mercury+json": {
+       "allow_download": true,
+       "code_uid": "App.0.40.25.3-rand4365c423",
+       "continuous_update": true,
+       "description": "it goes left to right",
+       "full_screen": true,
+       "model_id": "mercury-app",
+       "notify": "{}",
+       "output": "app",
+       "schedule": "",
+       "show_code": true,
+       "show_prompt": false,
+       "show_sidebar": true,
+       "static_notebook": false,
+       "stop_on_error": false,
+       "title": "",
+       "widget": "App"
+      },
+      "text/html": [
+       "<h3>Mercury Application</h3><small>This output won't appear in the web app.</small>"
+      ],
+      "text/plain": [
+       "mercury.App"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
+    "import mercury as mr\n",
     "app = mr.App(description=\"it goes left to right\",\n",
     "             show_code = True,\n",
     "             static_notebook=False)"
@@ -36,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
