--- a/src/content/complex-analysis/cauchy-integral.mdx
+++ b/src/content/complex-analysis/cauchy-integral.mdx
@@ -7,11 +7,11 @@ description: "A foundational result in complex analysis involving contour integr
 
 One of the most beautiful results in complex analysis:
 
-> If \\( f(z) \\) is analytic on and within a closed curve \\( C \\), then:
->
-> \\[
-> \oint_C f(z)\,dz = 0
-> \\]
+If \\( f(z) \\) is analytic on and within a closed curve \\( C \\), then:
+
+ \\[
+ \oint_C f(z)\,dz = 0
+\\]
 
 
 This means the integral of a holomorphic function around a closed contour is zero.
